# biasight

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
biasight/: bias.py  config.py  gemini.py  limit.py  main.py  model.py  notify.py  parse.py  util.py
biasight/templates/: analyze.jinja
tests/: test_bias.py  test_limit.py
