[tool.poetry]
name = "biasight"
version = "0.1.0"
description = ""
authors = ["Volker Janz <volker.janz@innogames.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
google-cloud-aiplatform = "^1.70.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
colorlog = "^6.8.2"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
